[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_01"
path = "src/day_01/main.rs"

[[bin]]
name = "day_02"
path = "src/day_02/main.rs"

[[bin]]
name = "day_03"
path = "src/day_03/main.rs"

[[bin]]
name = "day_04"
path = "src/day_04/main.rs"

[[bin]]
name = "day_05"
path = "src/day_05/main.rs"

[dependencies]
anyhow = "1.0.70"
aoc-parse = "0.2.17"
indicatif = "0.17.7"
itertools = "0.12.0"
regex = "1.10.2"
simple-log = "1.6.0"
